# tachyomancer

./: .dockerignore  Cargo.toml  README.md  RELEASE.md  build.rs
tachy/: Cargo.toml
tachy/src/: lib.rs  macros.rs
tachy/src/geom/: cast.rs  color.rs  fixed.rs  mod.rs  orient.rs  polygon.rs  rect.rs
tachy/src/save/: chip.rs  circuit.rs  converse.rs  hotkey.rs  mod.rs  puzzle.rs  score.rs  set.rs  size.rs  solution.rs
tachy/src/state/: change.rs  check.rs  edit.rs  eval.rs  interface.rs  mod.rs  port.rs  size.rs  verify.rs
tachy/src/state/chip/: arith.rs  compare.rs  data.rs  debug.rs  doc.rs  event.rs  logic.rs  memory.rs  mod.rs  special.rs  timing.rs  value.rs
tachy/src/state/puzzle/: beacon.rs  collector.rs  cryocycler.rs  drill.rs  enrichment.rs  fab_arith.rs  fab_clock.rs  fab_event.rs  fab_memory.rs  fabricate.rs  fuel.rs  geiger.rs  grapple.rs  guidance.rs  heliostat.rs  iface.rs  incubator.rs  injector.rs  lander.rs  mining.rs  mod.rs  reactor.rs  resonator.rs  rng.rs  robotarm.rs  sandbox.rs  sapper.rs  sensors.rs  shared.rs  shields.rs  sonar.rs  storage.rs  translator.rs  turret.rs  (+6 more)
tachy/tests/: failures.rs  malformed.rs  solutions.rs
tachy/tests/failures/: cryocycler_already_thawed.toml  cryocycler_invalid_pod.toml  cryocycler_unready_pod.toml  enrichment_invalid_tank.toml  enrichment_occupied_tank.toml  fab_behavior_wrong.toml  fuel_synth_intakes_open_while_mixing.toml  fuel_synth_mix_while_mixing.toml  fuel_synth_not_enough_to_mix.toml  fuel_synth_tank_1_overflow.toml  fuel_synth_tank_2_overflow.toml  guidance_shot_down.toml  infinite_loop.toml  mining_robot_carry_too_much.toml  robot_arm_manipulate_twice.toml  robot_arm_manipulate_wrong_position.toml  robot_arm_reply_before_done.toml  robot_arm_reply_twice.toml  sonar_crash_port.toml  sonar_crash_stbd.toml  x_unit_incomplete_detonation.toml
tachy/tests/malformed/: chip_out_of_bounds.original.toml  chip_out_of_bounds.repaired.toml  disallowed_or_gate.original.toml  disallowed_or_gate.repaired.toml  empty_bounds.original.toml  empty_bounds.repaired.toml  mismatched_wires.original.toml  mismatched_wires.repaired.toml  overlapping_chips.original.toml  overlapping_chips.repaired.toml  wires_out_of_bounds.original.toml  wires_out_of_bounds.repaired.toml  wires_underneath_chips.original.toml  wires_underneath_chips.repaired.toml
tachy/tests/solutions/: automate_collector.toml  automate_cryocycler.toml  automate_drilling_rig.toml  automate_enrichment.toml  automate_fuel_synth.toml  automate_geiger_counter_fast.toml  automate_geiger_counter_small.toml  automate_grapple.toml  automate_heliostat_fast.toml  automate_heliostat_small.toml  automate_incubator.toml  automate_injector.toml  automate_mining_robot.toml  automate_reactor_fast.toml  automate_reactor_medium.toml  automate_reactor_small.toml  automate_resonator_fast.toml  automate_resonator_small.toml  automate_robot_arm.toml  automate_sensors_fast.toml  automate_sensors_small.toml  automate_sonar.toml  automate_storage_depot.toml  automate_translator.toml  automate_x_unit.toml  command_lander_auto.toml  command_lander_manual.toml  command_sapper_manual.toml  command_shields.toml  command_shields_manual.toml  fabricate_counter.toml  fabricate_egg_timer.toml  fabricate_halve.toml  fabricate_inc.toml  fabricate_latch.toml  fabricate_mul.toml  fabricate_queue.toml  fabricate_stack.toml  fabricate_stopwatch.toml  fabricate_xor.toml  (+10 more)
tachyomancer/: Cargo.toml  build.rs
tachyomancer/src/: main.rs
tachyomancer/src/mancer/: mod.rs
(+388 files in other folders)
