[package]
name = "tachyomancer"
version = "0.1.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
license = "GPL-3.0+"
description = "A circuit-programming puzzle game."
build = "build.rs"

[build-dependencies]
icns = "0.3"
png = "0.13"
nsvg = { version = "0.5", default-features = false }
rusttype = "0.7"

[dependencies]
app_dirs = "1.2"
cgmath = "0.16"
claxon = "0.4"
getopts = "0.2"
gl = "0.10"
indexmap = "1"
num-integer = "0.1"
pathfinding = "1.1"
png = "0.13"
sdl2 = { version = "0.31", features = ["use_mac_framework"] }
serde = "1"
serde_derive = "1"
textwrap = "0.11"
toml = "0.4"
unicode-width = "0.1"
